# path-of-purpose

./: .gitattributes  .gitignore  CLAUDE.md  PathOfPurpose-ServerSetup.spec  build-tauri.bat  build-tauri.ps1  latest.json  release.sh
.claude/: settings.local.json
docs/: ROADMAP.md
src-python/: nuitka.build.cmd  pyproject.toml
src-python/pop/: __init__.py  main.py
src-python/pop/ai/: advisor.py  generator.py  prompts.py  provider.py
src-python/pop/build_parser/: __init__.py  models.py  pob_decode.py  tree_data.py
src-python/pop/calc/: __init__.py  ascendancy_effects.py  aura_effects.py  calc_context.py  config_reader.py  conversion.py  crit_calc.py  curse_effects.py  defense_calc.py  dot_calc.py  engine.py  flask_effects.py  gem_data.py  gem_quality.py  impale_calc.py  keystone_effects.py  map_mods.py  mod_parser.py  models.py  player_defense_calc.py  repoe_loader.py  speed_calc.py  stat_aggregator.py  synthetic_items.py  tree_estimator.py  tree_stats.py  unique_db.py
src-python/pop/delta/: __init__.py  engine.py  gear_diff.py  gem_diff.py  models.py  passive_diff.py
src-python/pop/gamedata/: __init__.py  registry.py  repoe_sync.py
src-python/pop/gamedata/cache/: parsed_gamedata.json  repoe_bases_raw.json
src-python/pop/knowledge/: cache.py  repoe_fetcher.py  supplements.py
src-python/pop/knowledge/cache/: knowledge.json  passive_tree.json
src-python/pop/log_watcher/: grace_verses.py  monster_names.py  watcher.py
src-python/pop/oauth/: client.py  token_store.py
src-python/pop/poe_api/: character_to_build.py  models.py  public_client.py  rate_limiter.py
src-python/pop/scrapers/: mobalytics.py
src-python/pop/trade/: client.py  models.py  query_builder.py
src-python/tests/: generate_fixture.py  test_ai_advisor.py  test_damage_calc.py  test_damage_calc_phase_b.py  test_damage_calc_phase_c.py  test_damage_calc_phase_d.py  test_damage_calc_phase_g.py  test_damage_calc_phase_h.py  test_damage_calc_phase_i.py  test_damage_calc_phase_j.py  test_gem_validation.py  test_knowledge.py  test_log_watcher.py  test_synthetic_items.py  test_trade_query_builder.py
src-server/: setup_vps.py
src-server/src-server/: pyproject.toml
src-server/src-server/pop_server/: app.py  config.py  run.py
src-server/src-server/pop_server/auth/: discord.py  jwt_utils.py  middleware.py  routes.py
src-tauri-app/: index.html  package-lock.json  package.json
src-tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
src-tauri-app/src-tauri/binaries/: README.md
src-tauri-app/src-tauri/capabilities/: default.json
src-tauri-app/src-tauri/src/: lib.rs  main.rs
(+91 files in other folders)
