[package]
name = "path-of-purpose"
version = "0.1.0"
description = "Path of Purpose — PoE build companion for Christian streamers"
authors = ["idealmind8"]
edition = "2021"

[lib]
name = "path_of_purpose_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["net", "io-util", "macros"] }
urlencoding = "2"
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2.3.1"
